truth-engine/api/tests/ui/exhaustive_wire_format_error.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/exhaustive_wire_format_error.rs:5:11
   |
 5 |     match e {
   |           ^ pattern `_` not covered
   |
note: `WireFormatError` defined here
  --> src/wire.rs
   |
   | pub enum WireFormatError {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `WireFormatError`
   = note: `WireFormatError` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
10 ~         WireFormatError::InvalidMsProofField(_) => {},
11 +         _ => todo!()
   |
